# ekiree-dashboard

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  flake.nix  nginx.conf  pyproject.toml  result  result-dev
.flox/: env.json
.flox/env/: manifest.toml
.github/: zizmor.yml
.github/workflows/: build-and-push-podman.yml  container_smoke_test.yml  django_testing.yml  publish.yml  release-build.yml  release-pr.yml
ekiree_dashboard/: entrypoint.prod.py  entrypoint.prod.sh
ekiree_dashboard/ed/: urls.py
ekiree_dashboard/ed/migrations/: 0024_alter_edcourse_id.py
ekiree_dashboard/ed/tests/: helpers.py  test_views_approved.py  test_views_courselist.py  test_views_ed.py  test_views_ed_extended.py  test_views_goals_majmin.py
ekiree_dashboard/ed/views/: views_approved.py  views_courselist.py  views_ed.py  views_goals.py  views_majmin.py
ekiree_dashboard/poetfolio/: settings.py  views.py
ekiree_dashboard/poetfolio/templates/: base.html
ekiree_dashboard/poetfolio/tests/: test_views.py
ekiree_dashboard/reports/tests/: helpers.py  test_exports.py  test_models.py  test_views.py
ekiree_dashboard/reports/views/: views_reports.py
ekiree_dashboard/siteconfig/: models.py
ekiree_dashboard/siteconfig/tests/: test_models.py  test_views.py
ekiree_dashboard/vita/: admin.py  filters.py  forms.py  models.py  views.py
ekiree_dashboard/vita/migrations/: 0017_home_page_publish_date.py  0049_rename_experince_type_offcampusexperience_experience_type.py
ekiree_dashboard/vita/tests/: helpers.py  test_models.py  test_views.py  test_views_offcampus.py
