[project]
name = "ekiree-dashboard"
version = "001.0.0"
description = "Course tracking software for the Whittier Scholars Program"
authors = [{name = "Ekiree", email = "noah@ekiree.tech"}]
license = {text = "GPL-3.0-only"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "babel>=2.14.0,<3",
    "django>=5.2.11,<6",
    "django-bootstrap4==23.1",
    "django-crispy-forms==2.1",
    "django-ckeditor-5>=0.2.15,<0.3",
    "django-js-asset>=2.2.0,<3",
    "django-localflavor==4.0",
    "django-phonenumber-field==7.2.0",
    "django-storages==1.14.4",
    "phonenumbers>=8.13.40,<9",
    "pillow==12.1.1",
    "python-stdnum==1.19",
    "pytz==2023.3",
    "reportlab==4.0.4",
    "gunicorn>=23.0.0,<24",
    "whitenoise==6.6.0",
    "brotli==1.2.0",
    "boto3==1.34.157",
    "urllib3==2.6.3",
    "authlib>=1.6.6,<2",
    "python-dotenv>=1.0.1,<2",
    "requests>=2.32.4,<3",
    "mysqlclient>=2.2.6,<3",
]

[dependency-groups]
dev = [
    "coverage>=7.6,<7.7",
    "django-stubs>=5.2.0",
    "django-stubs-ext>=5.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ekiree_dashboard"]

[tool.pyright]
include = ["./"]
exclude = ["**/migrations/"]

pythonVersion = "3.11"
pythonPlatform = "Linux"
typeCheckingMode = "basic"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "poetfolio.settings"
